Fix HTML structure and formatting issues

--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
                     </ul>
                 </div>
                 <div class="contact-form fade-in">
-                    <form>
+                    <form action="https://api.web3forms.com/submit" method="POST">
+                        <input type="hidden" name="access_key" value="939a30a8-0e5a-48ef-b2fa-e96d1a8681c2">
                         <input type="text" placeholder="Your Name" required>
                         <input type="email" placeholder="Your Email" required>
-                        <input type="text" placeholder="Subject">
                         <textarea placeholder="Your Message" required></textarea>
                         <button type="submit" class="btn">Send Message</button>
                     </form>
@@ -184,8 +184,6 @@
         <div class="container">
             <div class="social-links">
                 <a href="https://x.com/mbra_17" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.instagram.com/m_br1a7?igsh=MXVreTF6aGV3eXdzZA==" target="_blank"><i>
-                        class="fab fa-instagram"></i></a>
                 <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://github.com/mbra17" target="_blank"><i class="fab fa-github"></i></a>
             </div>
