Fix HTML structure and formatting issues

--- a/index.html
+++ b/index.html
@@ -141,12 +141,14 @@
 
             </div>
             <div class="project-item fade-in">
+                <a href="https://mbra17.github.io/TheBearCafe/" target="_blank" class="project-link">
+                
                 <div class="project-img">
-                    <img src="photos/t.jpeg" alt="Project 3">
+                    <img src="photos/لقطة شاشة 2025-10-31 021546.png" alt="Project 3">
                 </div>
                 <div class="project-info">
                     <h3>coming soon</h3>
-                    <p>???</p>
+                    <p>A website for a responsive and beautiful fake cafe</p>
                 </div>
             </div>
         </div>
@@ -197,3 +199,4 @@
 </body>
 
 </html>
+
